fix overflow

--- a/projectRyanV2/style.css
+++ b/projectRyanV2/style.css
@@ -26,6 +26,7 @@ body {
 	margin: 0px;
     text-align: center;
     display: block;
+    overflow: hidden;
 }
 
 /*<div>*/
